LogController Action table and working on LogInfo table

--- a/InternshipSkeleton.Data/AsignioInternship.Data.csproj
+++ b/InternshipSkeleton.Data/AsignioInternship.Data.csproj
@@ -50,11 +50,21 @@
     <Compile Include="Example\ExamplePoco.cs" />
     <Compile Include="Example\ExampleRepository.cs" />
     <Compile Include="Example\IExampleRepository.cs" />
+    <Compile Include="LogControllerAction\ILogControllerActionRepository.cs" />
+    <Compile Include="LogControllerAction\LogControllerActionDataModel.cs" />
+    <Compile Include="LogControllerAction\LogControllerActionExtensions.cs" />
+    <Compile Include="LogControllerAction\LogControllerActionPoco.cs" />
+    <Compile Include="LogControllerAction\LogControllerActionRepository.cs" />
     <Compile Include="LogException\ILogExceptionRepository.cs" />
     <Compile Include="LogException\LogExceptionDataModel.cs" />
     <Compile Include="LogException\LogExceptionExtensions.cs" />
     <Compile Include="LogException\LogExceptionPoco.cs" />
     <Compile Include="LogException\LogExceptionRepository.cs" />
+    <Compile Include="LogInfo\ILogInfoRepository.cs" />
+    <Compile Include="LogInfo\LogInfoDataModel.cs" />
+    <Compile Include="LogInfo\LogInfoExtensions.cs" />
+    <Compile Include="LogInfo\LogInfoPoco.cs" />
+    <Compile Include="LogInfo\LogInfoRepository.cs" />
     <Compile Include="Log\ILogRepository.cs" />
     <Compile Include="Log\LogDataModel.cs" />
     <Compile Include="Log\LogExtensions.cs" />
