--- a/InternshipSkeleton/AsignioInternship.csproj
+++ b/InternshipSkeleton/AsignioInternship.csproj
@@ -144,6 +144,7 @@
     <Compile Include="Controllers\LogControllerActionController.cs" />
     <Compile Include="Controllers\LogExceptionController.cs" />
     <Compile Include="Controllers\LogInfoController.cs" />
+    <Compile Include="Controllers\LogMySqlController.cs" />
     <Compile Include="DependencyResolution\AppRegistry.cs" />
     <Compile Include="DependencyResolution\ControllerConvention.cs" />
     <Compile Include="DependencyResolution\DefaultRegistry.cs" />
@@ -201,6 +202,7 @@
     <Content Include="Views\Log\Index.cshtml" />
     <Content Include="Views\LogControllerAction\Index.cshtml" />
     <Content Include="Views\LogInfo\Index.cshtml" />
+    <Content Include="Views\LogMySql\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
