--- a/InternshipSkeleton/AsignioInternship.csproj
+++ b/InternshipSkeleton/AsignioInternship.csproj
@@ -207,6 +207,9 @@
     <Content Include="Views\LogMySql\Index.cshtml" />
     <Content Include="Views\LogWebRequest\Index.cshtml" />
     <Content Include="Views\LogWebResponse\Index.cshtml" />
+    <Content Include="Views\Log\SearchByUserID.cshtml" />
+    <Content Include="Views\Log\Search.cshtml" />
+    <Content Include="Views\Log\DisplayUserIDResult.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
