--- a/InternshipSkeleton/AsignioInternship.csproj
+++ b/InternshipSkeleton/AsignioInternship.csproj
@@ -219,6 +219,12 @@
     <Content Include="Views\LogInfo\Search.cshtml" />
     <Content Include="Views\LogInfo\SearchByUserID.cshtml" />
     <Content Include="Views\LogInfo\DisplayUserIDResult.cshtml" />
+    <Content Include="Views\LogWebRequest\Search.cshtml" />
+    <Content Include="Views\LogWebRequest\SearchByUserID.cshtml" />
+    <Content Include="Views\LogWebRequest\DisplayUserIDResult.cshtml" />
+    <Content Include="Views\LogWebResponse\Search.cshtml" />
+    <Content Include="Views\LogWebResponse\SearchByUserID.cshtml" />
+    <Content Include="Views\LogWebResponse\DisplayUserIDResult.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
