starting to implement search by MethodName in LogException

--- a/InternshipSkeleton/AsignioInternship.csproj
+++ b/InternshipSkeleton/AsignioInternship.csproj
@@ -216,8 +216,8 @@
     <Content Include="Views\LogControllerAction\SearchByUserID.cshtml" />
     <Content Include="Views\LogControllerAction\DisplayUserIDResult.cshtml" />
     <Content Include="Views\LogException\Search.cshtml" />
-    <Content Include="Views\LogException\SearchByUserID.cshtml" />
-    <Content Include="Views\LogException\DisplayUserIDResult.cshtml" />
+    <Content Include="Views\LogException\SearchByMethodName.cshtml" />
+    <Content Include="Views\LogException\DisplayMethodNameSearchResult.cshtml" />
     <Content Include="Views\LogInfo\Search.cshtml" />
     <Content Include="Views\LogInfo\SearchByUserID.cshtml" />
     <Content Include="Views\LogInfo\DisplayUserIDResult.cshtml" />
