--- a/InternshipSkeleton.Data/AsignioInternship.Data.csproj
+++ b/InternshipSkeleton.Data/AsignioInternship.Data.csproj
@@ -53,6 +53,9 @@
     <Compile Include="CombinedLogInfo\CombinedLogInfoDataModel.cs" />
     <Compile Include="CombinedLogInfo\CombinedLogInfoExtensions.cs" />
     <Compile Include="CombinedLogInfo\CombinedLogInfoPoco.cs" />
+    <Compile Include="CombinedLog\CombinedLogDataModel.cs" />
+    <Compile Include="CombinedLog\CombinedLogExtensions.cs" />
+    <Compile Include="CombinedLog\CombinedLogPoco.cs" />
     <Compile Include="DataModelCollection.cs" />
     <Compile Include="Example\ExampleDataModel.cs" />
     <Compile Include="Example\ExampleExtensions.cs" />
