Working on marking logs as important

--- a/InternshipSkeleton/AsignioInternship.csproj
+++ b/InternshipSkeleton/AsignioInternship.csproj
@@ -218,7 +218,8 @@
     <Content Include="Views\LogMySql\Index.cshtml" />
     <Content Include="Views\LogWebRequest\Index.cshtml" />
     <Content Include="Views\LogWebResponse\Index.cshtml" />
-    <Content Include="Views\LogException\Update.cshtml" />
+    <Content Include="Views\LogException\MarkAsImportant.cshtml" />
+    <Content Include="Views\LogException\ImportantUpdated.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
