Making changes to LogControllerAction for Mark and Unmark as important

--- a/InternshipSkeleton.Data/AsignioInternship.Data.csproj
+++ b/InternshipSkeleton.Data/AsignioInternship.Data.csproj
@@ -120,6 +120,7 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
+    <Content Include="DatabaseScripts\alterLogControllerAction_addImportantColumn.sql" />
     <Content Include="DatabaseScripts\alterLog_addImportantColumn.sql" />
     <Content Include="DatabaseScripts\alterLogException_addImportantColumn.sql" />
     <Content Include="DatabaseScripts\exampleInnerJoin.sql" />
