made Mark as (un)Important changes to LogInfo

--- a/InternshipSkeleton.Data/AsignioInternship.Data.csproj
+++ b/InternshipSkeleton.Data/AsignioInternship.Data.csproj
@@ -121,6 +121,7 @@
   <ItemGroup />
   <ItemGroup>
     <Content Include="DatabaseScripts\alterLogControllerAction_addImportantColumn.sql" />
+    <Content Include="DatabaseScripts\alterLogInfo_addImportantColumn.sql" />
     <Content Include="DatabaseScripts\alterLog_addImportantColumn.sql" />
     <Content Include="DatabaseScripts\alterLogException_addImportantColumn.sql" />
     <Content Include="DatabaseScripts\exampleInnerJoin.sql" />
