--- a/InternshipSkeleton.Data/AsignioInternship.Data.csproj
+++ b/InternshipSkeleton.Data/AsignioInternship.Data.csproj
@@ -122,6 +122,7 @@
   <ItemGroup>
     <Content Include="DatabaseScripts\alterLogControllerAction_addImportantColumn.sql" />
     <Content Include="DatabaseScripts\alterLogInfo_addImportantColumn.sql" />
+    <Content Include="DatabaseScripts\alterLogMySql_addImportantColumn.sql" />
     <Content Include="DatabaseScripts\alterLog_addImportantColumn.sql" />
     <Content Include="DatabaseScripts\alterLogException_addImportantColumn.sql" />
     <Content Include="DatabaseScripts\exampleInnerJoin.sql" />
