deleted old, unnecessary view files; fixed search categories in Index files

--- a/InternshipSkeleton/AsignioInternship.csproj
+++ b/InternshipSkeleton/AsignioInternship.csproj
@@ -224,6 +224,7 @@
     <Content Include="Views\LogMySql\Index.cshtml" />
     <Content Include="Views\LogWebRequest\Index.cshtml" />
     <Content Include="Views\LogWebResponse\Index.cshtml" />
+    <Content Include="Views\LogException\AdvancedSearch.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
