made new advanced search changes to Log table

--- a/InternshipSkeleton/AsignioInternship.csproj
+++ b/InternshipSkeleton/AsignioInternship.csproj
@@ -226,6 +226,8 @@
     <Content Include="Views\LogWebResponse\Index.cshtml" />
     <Content Include="Views\LogException\AdvancedSearch.cshtml" />
     <Content Include="Views\LogException\SearchIndex.cshtml" />
+    <Content Include="Views\Log\AdvancedSearch.cshtml" />
+    <Content Include="Views\Log\SearchIndex.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
