--- a/InternshipSkeleton/AsignioInternship.csproj
+++ b/InternshipSkeleton/AsignioInternship.csproj
@@ -228,6 +228,8 @@
     <Content Include="Views\LogException\SearchIndex.cshtml" />
     <Content Include="Views\Log\AdvancedSearch.cshtml" />
     <Content Include="Views\Log\SearchIndex.cshtml" />
+    <Content Include="Views\LogControllerAction\AdvancedSearch.cshtml" />
+    <Content Include="Views\LogControllerAction\SearchIndex.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
