--- a/InternshipSkeleton/AsignioInternship.csproj
+++ b/InternshipSkeleton/AsignioInternship.csproj
@@ -232,6 +232,8 @@
     <Content Include="Views\LogControllerAction\SearchIndex.cshtml" />
     <Content Include="Views\LogInfo\AdvancedSearch.cshtml" />
     <Content Include="Views\LogInfo\SearchIndex.cshtml" />
+    <Content Include="Views\LogMySql\AdvancedSearch.cshtml" />
+    <Content Include="Views\LogMySql\SearchIndex.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
