--- a/InternshipSkeleton/AsignioInternship.csproj
+++ b/InternshipSkeleton/AsignioInternship.csproj
@@ -234,6 +234,8 @@
     <Content Include="Views\LogInfo\SearchIndex.cshtml" />
     <Content Include="Views\LogMySql\AdvancedSearch.cshtml" />
     <Content Include="Views\LogMySql\SearchIndex.cshtml" />
+    <Content Include="Views\LogWebRequest\AdvancedSearch.cshtml" />
+    <Content Include="Views\LogWebRequest\SearchIndex.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
